--- a/src/components/Career/career.css
+++ b/src/components/Career/career.css
@@ -11,12 +11,11 @@
     font-weight: 400;
     line-height: 1.667em;
     margin-left: 45px;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 .image-cov {
     width: 100%;
     height: 100%;
-    margin-top: 40px;
     object-fit: cover;
     box-shadow: -49px -43px 1px 1px #cf2e2e;
     flex: 1;
@@ -38,10 +37,30 @@
     margin-top: 10px;
 }
 
-#opportunities .img-11-class{
-    box-shadow: 53px -39px 2px 1px #000;
-}
-
-#research .img-11-class{
-    box-shadow: 53px -39px 2px 1px #000;
-}
+.customer-section {
+    text-align: center;
+    padding: 1rem;
+  }
+  
+  .customer-logos {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 7rem;
+    margin-top: 2rem;
+    padding-inline-end: 10px;
+  }
+  
+  .customer-logos img {
+    max-width: 120px;
+    max-height: 80px;
+    filter: grayscale(50%);
+    opacity: 0.7;
+    transition: all 0.3s ease;
+  }
+  
+  .customer-logos img:hover {
+    filter: grayscale(0%);
+    opacity: 1;
+    transform: scale(1.1);
+  }
