--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,119 +1,29 @@
 .footer {
-    background-color: #2e2d2d;
-    color: #fff;
-    padding: 20px;
-  }
-  
-  .footer-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    /* max-width: 1200px; */
-    margin: 0 auto;
-  }
-  
-  .footer-left,
-  .footer-middle,
-  .footer-right {
-    flex: 1;
-    padding: 10 30px;
-    text-align: left;
-  }
-  .university-info {
-    display: flex;
-    align-items: center; /* Align items vertically */
-  }
-  /* .university-name {
-    font-size: 24px;
-    margin-bottom: 10px;
-  } */
-  .university-name {
-    margin-right: 10px; /* Add some spacing between the name and the logo */
-  }
-  
-  .img1-logo {
-    width: 200px; /* Adjust the width as needed */
-    height: 200px; /* Maintain aspect ratio */
-  }
+  background-color: #333;
+}
 
-  
-  .university-motto {
-    font-size: 12px;
-    letter-spacing: .14em;
-    line-height: 18px;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-  }
-  
-  .contact-info p {
-    margin: 5px 0;
-  }
-  
-  .helpful-links-title {
-    margin-top: 60px;
-    margin-bottom: 10px;
-  }
-  
-  .helpful-links-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 0;
-  }
-  
-  .helpful-links-list li {
-    flex: 0 0 calc(33.33% - 10px); /* Adjust width as needed */
-    margin-bottom: 20px; /* Space between rows */
-    list-style: none;
-  }
-  .contact-info p {
-    margin-bottom: 5px;
-  }
-  
-  .contact-info i {
-    margin-right: 5px;
-  }
-  
-  .apply-buttons button {
-    margin-right: 10px;
-    padding: 8px 16px;
-    background-color: #fff;
-    color: #333;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .follow-us-title {
-    margin-top: 10px;
-    margin-right: 10px;
-    text-align: center;
-  }
-  
-  .footer-bottom {
-    margin-top: 20px;
-    text-align: center;
-    font-size: 14px;
-  }
+.footer-title {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
 
-  .social-links {
-    display: flex;
-    justify-content: flex-start;
-    text-align: right;
-    /* margin-top: 10px; */
-  }
-  
-  .social-links a {
-    color: #fff;
-    font-size: 24px;
-    margin-left: 50px;
-    transition: color 0.3s ease;
-    text-align: right;
-  }
-  
-  .social-links a:hover {
-    color: #c12e2e;
-  }
+.social-icons a {
+  font-size: 1.5rem;
+  margin-right: 10px;
+  text-decoration: none;
+}
 
-.apply-buttons button:hover{
-    color:#2e2d2d
+.social-icons a:hover {
+  color: #ccc;
+}
+
+.btn-outline-light {
+  border-color: #ccc;
+  color: #ccc;
+  margin: 0.2rem;
+}
+
+.btn-outline-light:hover {
+  background-color: #ccc;
+  color: #333;
 }
