--- a/src/components/Landingpage/landingpage.css
+++ b/src/components/Landingpage/landingpage.css
@@ -31,7 +31,7 @@
 
 .intro p {
     color: #fff;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 300;
     line-height: 30px;
     margin: 0 auto;
@@ -39,8 +39,7 @@
 }
 
 #header .intro-text {
-    padding-top: 150px;
-    text-align: justify;
+    padding-top: 215px;
     padding-bottom: 200px;
 }
 
@@ -109,6 +108,7 @@ a:hover {
 .link-btn{
     color: black;
     text-decoration: none;
+    cursor: pointer;
 }
 .link-btn:hover {
     color: #cf2e2e
@@ -122,4 +122,11 @@ a:hover {
     background-color: rgba(3, 18, 32, .1);
     height: 120px;
     width: 1px;
+}
+.line-white {
+    width: 180px;
+    height: 2px;
+    min-height: 2px;
+    background-color: #fff;
+    
 }
