--- a/src/components/Faculty/faculty.css
+++ b/src/components/Faculty/faculty.css
@@ -1,6 +1,6 @@
 .image-cover {
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     flex: 1;
     transition: 0.3s;
@@ -25,4 +25,13 @@
 .prof-name:hover{
     cursor: pointer;
     color:#cf2e2e;
+}
+.prof-name{
+    font-size: 18px;
+}
+.text-uppercase{
+    font-size: 13px;
+}
+.margin-bottom-35{
+    margin-bottom: 35px;
 }
