added research pages

--- a/src/components/Research/research.css
+++ b/src/components/Research/research.css
@@ -7,3 +7,18 @@
     margin-bottom: 10px;
     padding-top: 10px;
 }
+
+.img-re-class{
+    max-height: 366px;
+    max-width: 516px;
+}
+
+.margin-top-32{
+    margin-top: 32px;
+}
+
+.bg-grey{
+    background-color: #f8f9fa;
+    padding: 10px;
+    margin-top: 50px !important;
+}
