--- a/src/components/Programs/program.css
+++ b/src/components/Programs/program.css
@@ -8,28 +8,68 @@
     line-height: 1.111em;
 }
 
-.margin-top-40{
-    margin-top:70px;
+.margin-top-40 {
+    margin-top: 70px;
 }
 
-.card-con-{
+.card-con- {
     color: black;
     font-size: 24px;
     font-weight: 500;
     line-height: 1.417em;
 }
-.card-bod{
+
+.card-bod {
     color: #4b5b70 !important;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.667em;
 }
+
 .shadow-02 {
     box-shadow: 0 2px 12px 0 #14142b14;
 }
-.display-c{
-    color:#cf2e2e;
+
+.display-c {
+    color: #cf2e2e;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.533em;
+}
+
+.bg-red {
+    width: 100%;
+    padding: 180px;
+    background:  linear-gradient(
+        rgba(0, 0, 0, 0.3),
+        rgba(0, 0, 0, 0.3)
+      ), url(../../images/ug-program.jpg) center center no-repeat;
+    background-color: #e5e5e5;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    color: white;
+}
+
+.h1-content {
+    margin-top: 0;
+    margin-bottom: 16px;
+    font-size: 54px;
+    font-weight: 400;
+    line-height: 1.222em;
+}
+
+.p-content {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.667em;
+}
+
+.display-data {
+    color: #000;
+    font-size: 45px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    line-height: 1.182em;
 }
