--- a/src/components/Programs/program.css
+++ b/src/components/Programs/program.css
@@ -78,9 +78,9 @@
     width: 100%;
     padding: 180px;
     background:  linear-gradient(
-        rgba(0, 0, 0, 0.3),
-        rgba(0, 0, 0, 0.3)
-      ), url(../../images/ug-program.jpg) center center no-repeat;
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ), url(../../images/major-ug.jpg) center center no-repeat;
     background-color: #e5e5e5;
     -webkit-background-size: cover;
     -moz-background-size: cover;
