--- a/src/components/Programs/major.css
+++ b/src/components/Programs/major.css
@@ -88,12 +88,9 @@
 .faculty-link {
   color: #ff0022;
   text-decoration: none;
-  font-size: 1.1rem;
+  font-size: .9rem;
 }
-.faculty-link:hover {
-  transform: scale(1.1);
-  color: #ff0022;
-}
+
 .btn-container {
   display: flex;
   justify-content: space-between;
