added major changes

--- a/src/components/Articles/articles.css
+++ b/src/components/Articles/articles.css
@@ -29,7 +29,7 @@
 }
 
 .text-uppercase {
-    color:#4b5b70;
+    color:#333333;
     letter-spacing: .06em;
     text-transform: uppercase;
     margin-bottom: 26px;
