--- a/src/components/Chooseus/choose.css
+++ b/src/components/Chooseus/choose.css
@@ -1,6 +1,8 @@
 .rounded-circle {
     border-radius: 50% !important;
     margin-top: 40px;
+    width: 80px;
+    height: 80px;
 }
 img {
     max-width: 100%;
