--- a/src/components/Mission/mission.css
+++ b/src/components/Mission/mission.css
@@ -37,7 +37,7 @@
 .prof-title{
     font-weight: 500;
     font-size: 14px;
-    color:#4b5b70;
+    color:#333333;
     text-transform: uppercase;
     line-height: 1.125em;
 }
