--- a/src/components/Alumni/alumni.css
+++ b/src/components/Alumni/alumni.css
@@ -2,6 +2,7 @@
     height: 68px;
     object-fit: cover;
     border-radius: 50%;
+    margin-bottom: 20px;
     transform: scale(1);
     transition: transform .3s;
     width: 68px;
@@ -13,7 +14,7 @@
     text-transform: uppercase;
     margin-bottom: 16px;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 30px;
     line-height: 1.111em;
 }
 
@@ -24,7 +25,7 @@
     line-height: 1.182em;
 }
 .testinomial {
-    color:#4b5b70;
+    color:#333333;
     font-size: 15px;
     text-align: justify;
     margin-top: -13px;
@@ -50,6 +51,9 @@
 
 .margin-top-40{
     margin-top:40px;
+}
+.margin-top-20{
+    margin-top:20px;
 }
 
 @media (min-width: 576px) {
