--- a/src/components/Landingpage/researchLanding.css
+++ b/src/components/Landingpage/researchLanding.css
@@ -11,7 +11,7 @@
 .projcard-container {
     margin-left: auto;
     margin-right: auto;
-    width: 1000px;
+    width: 100%;
 }
 
 .projcard {
@@ -149,7 +149,7 @@
 
 .projcard-description {
     z-index: 10;
-    color: #4b5b70 !important;
+    color: #333333 !important;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.667em;
