--- a/src/components/Opportunities/opportunities.css
+++ b/src/components/Opportunities/opportunities.css
@@ -6,11 +6,10 @@
 }
 
 .display-p {
-    color: #4b5b70;
+    color: #333333;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.667em;
-    margin-left: 45px;
     margin-top: 10px;
 }
 .image-cov {
@@ -26,7 +25,7 @@
 }
 
 .opp-content{
-    color: #4b5b70;
+    color: #333333;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.667em;
