--- a/src/components/Programs/program.css
+++ b/src/components/Programs/program.css
@@ -20,7 +20,7 @@
 }
 
 .card-bod {
-    color: #4b5b70 !important;
+    color: #333333 !important;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.667em;
@@ -50,6 +50,17 @@
     background-size: cover;
     -o-background-size: cover;
     color: white;
+}
+@media (max-width: 767px) {
+  .bg-red {
+    padding:10px;
+    width: 100%;
+    background:  linear-gradient(
+        rgba(0, 0, 0, 0.3),
+        rgba(0, 0, 0, 0.3)
+      ), url(../../images/ug-program.jpg) center center no-repeat;
+    background-color: #e5e5e5;
+  }
 }
 
 .h1-content {
@@ -88,6 +99,17 @@
     -o-background-size: cover;
     color: white;
 }
+@media (max-width: 767px) {
+  .major-bg-red {
+    padding:10px;
+    width: 100%;
+    background:  linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ), url(../../images/major-ug.jpg) center center no-repeat;
+    background-color: #e5e5e5;
+  }
+}
 .explore-programs-card-content {
     padding: 10px 15px 25px;
 }
@@ -95,7 +117,7 @@
     box-shadow: 0 2px 12px 0 #14142b14;
 }
 .card-cont{
-    color: #4b5b70;
+    color: #333333;
     font-family: Satoshi, sans-serif;
     font-size: 16px;
     font-weight: 400;
@@ -129,7 +151,7 @@
     font-weight: 400;
     margin: 0;
     line-height: 1.5em;
-    color: #4b5b70;
+    color: #333333;
   }
   
   .tpn_card .tpn_btn{
